Fix header jitter on iOS

--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@
 }
 body {
   margin: 0;
-  padding: 0 0 1.618rem;
+  padding: calc(3.618rem + .0625rem) 0 1.618rem;
   font-family: sans-serif;
   overflow-x: clip;
 }
@@ -22,11 +22,12 @@ body > header {
   border-bottom: .0625rem solid var(--gray-alpha);
   background-color: var(--background-color);
   z-index: 2;
-  position: sticky;
+  position: fixed;
   transition: top .236s;
   border-top: .0625rem solid var(--gray);
   top: -.0625rem;
-  margin-top: -.0625rem;
+  left: 0;
+  right: 0;
 }
 body > header.visible {
   transition: top .236s;
